5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4155/executions/1674_1105.log
== TEST (2019-04-28 15:55:10) 
-- CODE:
x = input("descricao do brasao: ")
print("Entrada:", x)

if((x == lobo) or (x == leao) or (x == veado) or (x == dragao) or (x == rosa) or (x == sol) or (x == lula) or (x == esfolado) or (x == turta)):
elif(x == lobo):
	print("Casa: Stark")
elif(x == leao):
	print("Casa: Lannister"):
elif(x == veado):
	print("Casa: Baratheon")
elif(x == dragao:)
	print("Casa: Targaryen")
elif(x == rosa):
	print("Casa: Tyrell")
elif(x == sol):
	print("Casa: Martell")
elif(x == lula):
	print("Casa: Greyjoy")
elif(x == esfolado):
	print("Casa: Bolton")
elif(x == turta):
	print("Casa: Tully")
else:
	print("Brasao invaldo")
-- ERROR:
File "XXXX", line 5
    elif(x == lobo):
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 15:55:32) 
-- CODE:
x = input("descricao do brasao: ")
print("Entrada:", x)

if((x == lobo) or (x == leao) or (x == veado) or (x == dragao) or (x == rosa) or (x == sol) or (x == lula) or (x == esfolado) or (x == turta)):
	elif(x == lobo):
		print("Casa: Stark")
	elif(x == leao):
		print("Casa: Lannister"):
elif(x == veado):
	print("Casa: Baratheon")
elif(x == dragao:)
	print("Casa: Targaryen")
elif(x == rosa):
	print("Casa: Tyrell")
elif(x == sol):
	print("Casa: Martell")
elif(x == lula):
	print("Casa: Greyjoy")
elif(x == esfolado):
	print("Casa: Bolton")
elif(x == turta):
	print("Casa: Tully")
else:
	print("Brasao invaldo")
-- ERROR:
File "XXXX", line 5
    elif(x == lobo):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 15:56:26) 
-- CODE:
x = input("descricao do brasao: ")
print("Entrada:", x)

if((x == lobo) or (x == leao) or (x == veado) or (x == dragao) or (x == rosa) or (x == sol) or (x == lula) or (x == esfolado) or (x == turta)):
elif(x == lobo):
	print("Casa: Stark")
elif(x == leao):
	print("Casa: Lannister"):
elif(x == veado):
	print("Casa: Baratheon")
elif(x == dragao:)
	print("Casa: Targaryen")
elif(x == rosa):
	print("Casa: Tyrell")
elif(x == sol):
	print("Casa: Martell")
elif(x == lula):
	print("Casa: Greyjoy")
elif(x == esfolado):
	print("Casa: Bolton")
elif(x == turta):
	print("Casa: Tully")
else:
	print("Brasao invaldo")
-- ERROR:
File "XXXX", line 5
    elif(x == lobo):
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 15:57:48) 
-- CODE:
x = input("descricao do brasao: ")
print("Entrada:", x)

if((x == lobo) or (x == leao) or (x == veado) or (x == dragao) or (x == rosa) or (x == sol) or (x == lula) or (x == esfolado) or (x == turta)):

	elif(x == lobo):
	print("Casa: Stark")
elif(x == leao):
	print("Casa: Lannister"):
elif(x == veado):
	print("Casa: Baratheon")
elif(x == dragao:)
	print("Casa: Targaryen")
elif(x == rosa):
	print("Casa: Tyrell")
elif(x == sol):
	print("Casa: Martell")
elif(x == lula):
	print("Casa: Greyjoy")
elif(x == esfolado):
	print("Casa: Bolton")
elif(x == turta):
	print("Casa: Tully")
else:
	print("Brasao invaldo")
-- ERROR:
File "XXXX", line 6
    elif(x == lobo):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 15:57:56) 
-- CODE:
x = input("descricao do brasao: ")
print("Entrada:", x)

if((x == lobo) or (x == leao) or (x == veado) or (x == dragao) or (x == rosa) or (x == sol) or (x == lula) or (x == esfolado) or (x == turta)):

elif(x == lobo):
	print("Casa: Stark")
elif(x == leao):
	print("Casa: Lannister"):
elif(x == veado):
	print("Casa: Baratheon")
elif(x == dragao:)
	print("Casa: Targaryen")
elif(x == rosa):
	print("Casa: Tyrell")
elif(x == sol):
	print("Casa: Martell")
elif(x == lula):
	print("Casa: Greyjoy")
elif(x == esfolado):
	print("Casa: Bolton")
elif(x == turta):
	print("Casa: Tully")
else:
	print("Brasao invaldo")
-- ERROR:
File "XXXX", line 6
    elif(x == lobo):
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 15:58:06) 
-- CODE:
x = input("descricao do brasao: ")
print("Entrada:", x)

if((x == lobo) or (x == leao) or (x == veado) or (x == dragao) or (x == rosa) or (x == sol) or (x == lula) or (x == esfolado) or (x == turta)):

elif (x == lobo):
	print("Casa: Stark")
elif(x == leao):
	print("Casa: Lannister"):
elif(x == veado):
	print("Casa: Baratheon")
elif(x == dragao:)
	print("Casa: Targaryen")
elif(x == rosa):
	print("Casa: Tyrell")
elif(x == sol):
	print("Casa: Martell")
elif(x == lula):
	print("Casa: Greyjoy")
elif(x == esfolado):
	print("Casa: Bolton")
elif(x == turta):
	print("Casa: Tully")
else:
	print("Brasao invaldo")
-- ERROR:
File "XXXX", line 6
    elif (x == lobo):
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 15:58:12) 
-- CODE:
x = input("descricao do brasao: ")
print("Entrada:", x)

if ((x == lobo) or (x == leao) or (x == veado) or (x == dragao) or (x == rosa) or (x == sol) or (x == lula) or (x == esfolado) or (x == turta)):

elif (x == lobo):
	print("Casa: Stark")
elif(x == leao):
	print("Casa: Lannister"):
elif(x == veado):
	print("Casa: Baratheon")
elif(x == dragao:)
	print("Casa: Targaryen")
elif(x == rosa):
	print("Casa: Tyrell")
elif(x == sol):
	print("Casa: Martell")
elif(x == lula):
	print("Casa: Greyjoy")
elif(x == esfolado):
	print("Casa: Bolton")
elif(x == turta):
	print("Casa: Tully")
else:
	print("Brasao invaldo")
-- ERROR:
File "XXXX", line 6
    elif (x == lobo):
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 15:58:23) 
-- CODE:
x = input("descricao do brasao: ")
print("Entrada:", x)

if ((x == lobo) or (x == leao) or (x == veado) or (x == dragao) or (x == rosa) or (x == sol) or (x == lula) or (x == esfolado) or (x == turta)):
elif (x == lobo):
	print("Casa: Stark")
elif(x == leao):
	print("Casa: Lannister"):
elif(x == veado):
	print("Casa: Baratheon")
elif(x == dragao:)
	print("Casa: Targaryen")
elif(x == rosa):
	print("Casa: Tyrell")
elif(x == sol):
	print("Casa: Martell")
elif(x == lula):
	print("Casa: Greyjoy")
elif(x == esfolado):
	print("Casa: Bolton")
elif(x == turta):
	print("Casa: Tully")
else:
	print("Brasao invaldo")
-- ERROR:
File "XXXX", line 5
    elif (x == lobo):
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 15:58:43) 
-- CODE:
x = input("descricao do brasao: ")
print("Entrada:", x)

if ((x == "lobo") or (x == leao) or (x == veado) or (x == dragao) or (x == rosa) or (x == sol) or (x == lula) or (x == esfolado) or (x == turta)):
elif (x == "lobo"):
	print("Casa: Stark")
elif(x == leao):
	print("Casa: Lannister"):
elif(x == veado):
	print("Casa: Baratheon")
elif(x == dragao:)
	print("Casa: Targaryen")
elif(x == rosa):
	print("Casa: Tyrell")
elif(x == sol):
	print("Casa: Martell")
elif(x == lula):
	print("Casa: Greyjoy")
elif(x == esfolado):
	print("Casa: Bolton")
elif(x == turta):
	print("Casa: Tully")
else:
	print("Brasao invaldo")
-- ERROR:
File "XXXX", line 5
    elif (x == "lobo"):
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 15:58:55) 
-- CODE:
x = input("descricao do brasao: ")
print("Entrada:", x)

if ((x == lobo) or (x == leao) or (x == veado) or (x == dragao) or (x == rosa) or (x == sol) or (x == lula) or (x == esfolado) or (x == turta)):
elif (x == "lobo"):
	print("Casa: Stark")
elif(x == leao):
	print("Casa: Lannister"):
elif(x == veado):
	print("Casa: Baratheon")
elif(x == dragao:)
	print("Casa: Targaryen")
elif(x == rosa):
	print("Casa: Tyrell")
elif(x == sol):
	print("Casa: Martell")
elif(x == lula):
	print("Casa: Greyjoy")
elif(x == esfolado):
	print("Casa: Bolton")
elif(x == turta):
	print("Casa: Tully")
else:
	print("Brasao invaldo")
-- ERROR:
File "XXXX", line 5
    elif (x == "lobo"):
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 16:01:34) 
-- CODE:
x = input("descricao do brasao: ")
print("Entrada:", x)

if ((x == lobo) or (x == leao) or (x == veado) or (x == dragao) or (x == rosa) or (x == sol) or (x == lula) or (x == esfolado) or (x == turta)):
elif (x == "lobo"):
	print("Casa: Stark")
elif(x == leao):
	print("Casa: Lannister"):
elif(x == veado):
	print("Casa: Baratheon")
elif(x == dragao:)
	print("Casa: Targaryen")
elif(x == rosa):
	print("Casa: Tyrell")
elif(x == sol):
	print("Casa: Martell")
elif(x == lula):
	print("Casa: Greyjoy")
elif(x == esfolado):
	print("Casa: Bolton")
elif(x == turta):
	print("Casa: Tully")
else:
	print("Brasao invaldo")
-- ERROR:
File "XXXX", line 5
    elif (x == "lobo"):
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 16:02:31) 
-- CODE:
x = input("descricao do brasao: ")
print("Entrada:", x)

if ((x == lobo) or (x == leao) or (x == veado) or (x == dragao) or (x == rosa) or (x == sol) or (x == lula) or (x == esfolado) or (x == turta)):

	if (x == "lobo"):
	print("Casa: Stark")
elif(x == leao):
	print("Casa: Lannister"):
elif(x == veado):
	print("Casa: Baratheon")
elif(x == dragao:)
	print("Casa: Targaryen")
elif(x == rosa):
	print("Casa: Tyrell")
elif(x == sol):
	print("Casa: Martell")
elif(x == lula):
	print("Casa: Greyjoy")
elif(x == esfolado):
	print("Casa: Bolton")
elif(x == turta):
	print("Casa: Tully")
else:
	print("Brasao invaldo")
-- ERROR:
File "XXXX", line 7
    print("Casa: Stark")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 16:02:39) 
-- CODE:
x = input("descricao do brasao: ")
print("Entrada:", x)

if ((x == lobo) or (x == leao) or (x == veado) or (x == dragao) or (x == rosa) or (x == sol) or (x == lula) or (x == esfolado) or (x == turta)):

	if (x == "lobo"):
		print("Casa: Stark")
elif(x == leao):
	print("Casa: Lannister"):
elif(x == veado):
	print("Casa: Baratheon")
elif(x == dragao:)
	print("Casa: Targaryen")
elif(x == rosa):
	print("Casa: Tyrell")
elif(x == sol):
	print("Casa: Martell")
elif(x == lula):
	print("Casa: Greyjoy")
elif(x == esfolado):
	print("Casa: Bolton")
elif(x == turta):
	print("Casa: Tully")
else:
	print("Brasao invaldo")
-- ERROR:
File "XXXX", line 9
    print("Casa: Lannister"):
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 16:03:15) 
-- CODE:
x = input("descricao do brasao: ")
print("Entrada:", x)

if ((x == lobo) or (x == leao) or (x == veado) or (x == dragao) or (x == rosa) or (x == sol) or (x == lula) or (x == esfolado) or (x == turta)):

	if (x == "lobo"):
		print("Casa: Stark")
	elif(x == leao):
		print("Casa: Lannister"):
	elif(x == veado):
		print("Casa: Baratheon")
	elif(x == dragao:)
		print("Casa: Targaryen")
	elif(x == rosa):
		print("Casa: Tyrell")
	elif(x == sol):
		print("Casa: Martell")
	elif(x == lula):
		print("Casa: Greyjoy")
	elif(x == esfolado):
		print("Casa: Bolton")
	elif(x == turta):
		print("Casa: Tully")
else:
	print("Brasao invaldo")
-- ERROR:
File "XXXX", line 9
    print("Casa: Lannister"):
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 16:03:20) 
-- CODE:
x = input("descricao do brasao: ")
print("Entrada:", x)

if ((x == lobo) or (x == leao) or (x == veado) or (x == dragao) or (x == rosa) or (x == sol) or (x == lula) or (x == esfolado) or (x == turta)):

	if (x == "lobo"):
		print("Casa: Stark")
	elif(x == leao):
		print("Casa: Lannister"):
	elif(x == veado):
		print("Casa: Baratheon")
	elif(x == dragao:)
		print("Casa: Targaryen")
	elif(x == rosa):
		print("Casa: Tyrell")
	elif(x == sol):
		print("Casa: Martell")
	elif(x == lula):
		print("Casa: Greyjoy")
	elif(x == esfolado):
		print("Casa: Bolton")
	elif(x == turta):
		print("Casa: Tully")
else:
	print("Brasao invaldo")
-- ERROR:
File "XXXX", line 9
    print("Casa: Lannister"):
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 16:03:32) 
-- CODE:
x = input("descricao do brasao: ")
print("Entrada:", x)

if ((x == lobo) or (x == leao) or (x == veado) or (x == dragao) or (x == rosa) or (x == sol) or (x == lula) or (x == esfolado) or (x == turta)):

	if (x == "lobo"):
		print("Casa: Stark")
	elif(x == "leao"):
		print("Casa: Lannister"):
	elif(x == veado):
		print("Casa: Baratheon")
	elif(x == dragao:)
		print("Casa: Targaryen")
	elif(x == rosa):
		print("Casa: Tyrell")
	elif(x == sol):
		print("Casa: Martell")
	elif(x == lula):
		print("Casa: Greyjoy")
	elif(x == esfolado):
		print("Casa: Bolton")
	elif(x == turta):
		print("Casa: Tully")
else:
	print("Brasao invaldo")
-- ERROR:
File "XXXX", line 9
    print("Casa: Lannister"):
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 16:03:54) 
-- CODE:
x = input("descricao do brasao: ")
print("Entrada:", x)

if ((x == lobo) or (x == leao) or (x == veado) or (x == dragao) or (x == rosa) or (x == sol) or (x == lula) or (x == esfolado) or (x == turta)):

	if (x == lobo):
		print("Casa: Stark")
	elif(x == leao):
		print("Casa: Lannister"):
	elif(x == veado):
		print("Casa: Baratheon")
	elif(x == dragao:)
		print("Casa: Targaryen")
	elif(x == rosa):
		print("Casa: Tyrell")
	elif(x == sol):
		print("Casa: Martell")
	elif(x == lula):
		print("Casa: Greyjoy")
	elif(x == esfolado):
		print("Casa: Bolton")
	elif(x == turta):
		print("Casa: Tully")
else:
	print("Brasao invaldo")
-- ERROR:
File "XXXX", line 9
    print("Casa: Lannister"):
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 16:04:08) 
-- CODE:
x = input("descricao do brasao: ")
print("Entrada:", x)

if ((x == lobo) or (x == leao) or (x == veado) or (x == dragao) or (x == rosa) or (x == sol) or (x == lula) or (x == esfolado) or (x == turta)):

	if (x == lobo):
		print("Casa: Stark")
elif(x == leao):
	print("Casa: Lannister"):
	elif(x == veado):
		print("Casa: Baratheon")
	elif(x == dragao:)
		print("Casa: Targaryen")
	elif(x == rosa):
		print("Casa: Tyrell")
	elif(x == sol):
		print("Casa: Martell")
	elif(x == lula):
		print("Casa: Greyjoy")
	elif(x == esfolado):
		print("Casa: Bolton")
	elif(x == turta):
		print("Casa: Tully")
else:
	print("Brasao invaldo")
-- ERROR:
File "XXXX", line 9
    print("Casa: Lannister"):
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 16:04:15) 
-- CODE:
x = input("descricao do brasao: ")
print("Entrada:", x)

if ((x == lobo) or (x == leao) or (x == veado) or (x == dragao) or (x == rosa) or (x == sol) or (x == lula) or (x == esfolado) or (x == turta)):

if (x == lobo):
	print("Casa: Stark")
elif(x == leao):
	print("Casa: Lannister"):
	elif(x == veado):
		print("Casa: Baratheon")
	elif(x == dragao:)
		print("Casa: Targaryen")
	elif(x == rosa):
		print("Casa: Tyrell")
	elif(x == sol):
		print("Casa: Martell")
	elif(x == lula):
		print("Casa: Greyjoy")
	elif(x == esfolado):
		print("Casa: Bolton")
	elif(x == turta):
		print("Casa: Tully")
else:
	print("Brasao invaldo")
-- ERROR:
File "XXXX", line 6
    if (x == lobo):
     ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 16:04:23) 
-- CODE:
x = input("descricao do brasao: ")
print("Entrada:", x)

if ((x == lobo) or (x == leao) or (x == veado) or (x == dragao) or (x == rosa) or (x == sol) or (x == lula) or (x == esfolado) or (x == turta)):

	if (x == lobo):
		print("Casa: Stark")
elif(x == leao):
	print("Casa: Lannister"):
	elif(x == veado):
		print("Casa: Baratheon")
	elif(x == dragao:)
		print("Casa: Targaryen")
	elif(x == rosa):
		print("Casa: Tyrell")
	elif(x == sol):
		print("Casa: Martell")
	elif(x == lula):
		print("Casa: Greyjoy")
	elif(x == esfolado):
		print("Casa: Bolton")
	elif(x == turta):
		print("Casa: Tully")
else:
	print("Brasao invaldo")
-- ERROR:
File "XXXX", line 9
    print("Casa: Lannister"):
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 16:04:31) 
-- CODE:
x = input("descricao do brasao: ")
print("Entrada:", x)

if ((x == lobo) or (x == leao) or (x == veado) or (x == dragao) or (x == rosa) or (x == sol) or (x == lula) or (x == esfolado) or (x == turta)):

	if (x == lobo):
		print("Casa: Stark")
	elif(x == leao):
		print("Casa: Lannister"):
	elif(x == veado):
		print("Casa: Baratheon")
	elif(x == dragao:)
		print("Casa: Targaryen")
	elif(x == rosa):
		print("Casa: Tyrell")
	elif(x == sol):
		print("Casa: Martell")
	elif(x == lula):
		print("Casa: Greyjoy")
	elif(x == esfolado):
		print("Casa: Bolton")
	elif(x == turta):
		print("Casa: Tully")
else:
	print("Brasao invaldo")
-- ERROR:
File "XXXX", line 9
    print("Casa: Lannister"):
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 16:04:43) 
-- CODE:
x = input("descricao do brasao: ")
print("Entrada:", x)

if ((x == lobo) or (x == leao) or (x == veado) or (x == dragao) or (x == rosa) or (x == sol) or (x == lula) or (x == esfolado) or (x == turta)):

	if (x == lobo):
		print("Casa: Stark")
	elif(x == leao):
		print("Casa: Lannister")
	elif(x == veado):
		print("Casa: Baratheon")
	elif(x == dragao:)
		print("Casa: Targaryen")
	elif(x == rosa):
		print("Casa: Tyrell")
	elif(x == sol):
		print("Casa: Martell")
	elif(x == lula):
		print("Casa: Greyjoy")
	elif(x == esfolado):
		print("Casa: Bolton")
	elif(x == turta):
		print("Casa: Tully")
else:
	print("Brasao invaldo")
-- ERROR:
File "XXXX", line 12
    elif(x == dragao:)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 16:04:59) 
-- CODE:
x = input("descricao do brasao: ")
print("Entrada:", x)

if ((x == lobo) or (x == leao) or (x == veado) or (x == dragao) or (x == rosa) or (x == sol) or (x == lula) or (x == esfolado) or (x == turta)):

	if (x == lobo):
		print("Casa: Stark")
	elif(x == leao):
		print("Casa: Lannister")
	elif(x == veado):
		print("Casa: Baratheon")
	elif(x == dragao:):
		print("Casa: Targaryen")
	elif(x == rosa):
		print("Casa: Tyrell")
	elif(x == sol):
		print("Casa: Martell")
	elif(x == lula):
		print("Casa: Greyjoy")
	elif(x == esfolado):
		print("Casa: Bolton")
	elif(x == turta):
		print("Casa: Tully")
else:
	print("Brasao invaldo")
-- ERROR:
File "XXXX", line 12
    elif(x == dragao:):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 16:05:04) 
-- CODE:
x = input("descricao do brasao: ")
print("Entrada:", x)

if ((x == lobo) or (x == leao) or (x == veado) or (x == dragao) or (x == rosa) or (x == sol) or (x == lula) or (x == esfolado) or (x == turta)):

	if (x == lobo):
		print("Casa: Stark")
	elif(x == leao):
		print("Casa: Lannister")
	elif(x == veado):
		print("Casa: Baratheon")
	elif(x == dragao:):
		print("Casa: Targaryen")
	elif(x == rosa):
		print("Casa: Tyrell")
	elif(x == sol):
		print("Casa: Martell")
	elif(x == lula):
		print("Casa: Greyjoy")
	elif(x == esfolado):
		print("Casa: Bolton")
	elif(x == turta):
		print("Casa: Tully")
else:
	print("Brasao invaldo")
-- ERROR:
File "XXXX", line 12
    elif(x == dragao:):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 16:05:21) 
-- CODE:
x = input("descricao do brasao: ")
print("Entrada:", x)

if ((x == lobo) or (x == leao) or (x == veado) or (x == dragao) or (x == rosa) or (x == sol) or (x == lula) or (x == esfolado) or (x == turta)):

	if (x == lobo):
		print("Casa: Stark")
	elif(x == leao):
		print("Casa: Lannister")
	elif(x == veado):
		print("Casa: Baratheon")
	elif(x == dragao):
		print("Casa: Targaryen")
	elif(x == rosa):
		print("Casa: Tyrell")
	elif(x == sol):
		print("Casa: Martell")
	elif(x == lula):
		print("Casa: Greyjoy")
	elif(x == esfolado):
		print("Casa: Bolton")
	elif(x == turta):
		print("Casa: Tully")
else:
	print("Brasao invaldo")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if ((x == lobo) or (x == leao) or (x == veado) or (x == dragao) or (x == rosa) or (x == sol) or (x == lula) or (x == esfolado) or (x == turta)):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 16:05:39) 
-- CODE:
x = input("descricao do brasao: ")
print("Entrada:", x)

if ((x == "lobo") or (x == leao) or (x == veado) or (x == dragao) or (x == rosa) or (x == sol) or (x == lula) or (x == esfolado) or (x == turta)):

	if (x == lobo):
		print("Casa: Stark")
	elif(x == leao):
		print("Casa: Lannister")
	elif(x == veado):
		print("Casa: Baratheon")
	elif(x == dragao):
		print("Casa: Targaryen")
	elif(x == rosa):
		print("Casa: Tyrell")
	elif(x == sol):
		print("Casa: Martell")
	elif(x == lula):
		print("Casa: Greyjoy")
	elif(x == esfolado):
		print("Casa: Bolton")
	elif(x == turta):
		print("Casa: Tully")
else:
	print("Brasao invaldo")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if ((x == "lobo") or (x == leao) or (x == veado) or (x == dragao) or (x == rosa) or (x == sol) or (x == lula) or (x == esfolado) or (x == turta)):
NameError: name 'leao' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 16:05:52) 
-- CODE:
x = input("descricao do brasao: ")
print("Entrada:", x)

if ((x == "lobo") or (x == leao) or (x == veado) or (x == dragao) or (x == rosa) or (x == sol) or (x == lula) or (x == esfolado) or (x == turta)):

	if (x == "lobo"):
		print("Casa: Stark")
	elif(x == leao):
		print("Casa: Lannister")
	elif(x == veado):
		print("Casa: Baratheon")
	elif(x == dragao):
		print("Casa: Targaryen")
	elif(x == rosa):
		print("Casa: Tyrell")
	elif(x == sol):
		print("Casa: Martell")
	elif(x == lula):
		print("Casa: Greyjoy")
	elif(x == esfolado):
		print("Casa: Bolton")
	elif(x == turta):
		print("Casa: Tully")
else:
	print("Brasao invaldo")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if ((x == "lobo") or (x == leao) or (x == veado) or (x == dragao) or (x == rosa) or (x == sol) or (x == lula) or (x == esfolado) or (x == turta)):
NameError: name 'leao' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 16:07:44) 
-- CODE:
x = input("descricao do brasao: ")
print("Entrada:", x)

if ((x == "lobo") or (x == "leao") or (x == "veado") or (x == "dragao") or (x == "rosa") or (x == "sol") or (x == "lula") or (x == "esfolado") or (x == "turta")):

	if (x == "lobo"):
		print("Casa: Stark")
	elif(x == "leao"):
		print("Casa: Lannister")
	elif(x == "veado):
		print("Casa: Baratheon")
	elif(x == "dragao):
		print("Casa: Targaryen")
	elif(x == "rosa"):
		print("Casa: Tyrell")
	elif(x == "sol"):
		print("Casa: Martell")
	elif(x == "lula):
		print("Casa: Greyjoy")
	elif(x == "esfolado"):
		print("Casa: Bolton")
	elif(x == "turta):
		print("Casa: Tully")
else:
	print("Brasao invaldo")
-- ERROR:
File "XXXX", line 10
    elif(x == "veado):
                     ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 16:07:51) 
-- CODE:
x = input("descricao do brasao: ")
print("Entrada:", x)

if ((x == "lobo") or (x == "leao") or (x == "veado") or (x == "dragao") or (x == "rosa") or (x == "sol") or (x == "lula") or (x == "esfolado") or (x == "turta")):

	if (x == "lobo"):
		print("Casa: Stark")
	elif(x == "leao"):
		print("Casa: Lannister")
	elif(x == "veado):
		print("Casa: Baratheon")
	elif(x == "dragao):
		print("Casa: Targaryen")
	elif(x == "rosa"):
		print("Casa: Tyrell")
	elif(x == "sol"):
		print("Casa: Martell")
	elif(x == "lula):
		print("Casa: Greyjoy")
	elif(x == "esfolado"):
		print("Casa: Bolton")
	elif(x == "turta):
		print("Casa: Tully")
else:
	print("Brasao invaldo")
-- ERROR:
File "XXXX", line 10
    elif(x == "veado):
                     ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 16:08:12) 
-- CODE:
x = input("descricao do brasao: ")
print("Entrada:", x)

if ((x == "lobo") or (x == "leao") or (x == "veado") or (x == "dragao") or (x == "rosa") or (x == "sol") or (x == "lula") or (x == "esfolado") or (x == "turta")):

	if (x == "lobo"):
		print("Casa: Stark")
	elif(x == "leao"):
		print("Casa: Lannister")
	elif(x == "veado):
		print("Casa: Baratheon")
	elif(x == "dragao):
		print("Casa: Targaryen")
	elif(x == "rosa"):
		print("Casa: Tyrell")
	elif(x == "sol"):
		print("Casa: Martell")
	elif(x == "lula):
		print("Casa: Greyjoy")
	elif(x == "esfolado"):
		print("Casa: Bolton")
	elif(x == "turta):
		print("Casa: Tully")
else:
	print("Brasao invaldo")
-- ERROR:
File "XXXX", line 10
    elif(x == "veado):
                     ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 16:10:03) 
-- CODE:
x = input("descricao do brasao: ")
print("Entrada:", x)

if ((x == "lobo") or (x == "leao") or (x == "veado") or (x == "dragao") or (x == "rosa") or (x == "sol") or (x == "lula") or (x == "esfolado") or (x == "turta")):

	if (x == "lobo"):
		print("Casa: Stark")
	elif(x == "leao"):
		print("Casa: Lannister")
	elif(x == "veado"):
		print("Casa: Baratheon")
	elif(x == "dragao"):
		print("Casa: Targaryen")
	elif(x == "rosa"):
		print("Casa: Tyrell")
	elif(x == "sol"):
		print("Casa: Martell")
	elif(x == "lula"):
		print("Casa: Greyjoy")
	elif(x == "esfolado"):
		print("Casa: Bolton")
	elif(x == "turta"):
		print("Casa: Tully")
else:
	print("Brasao invaldo")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 16:10:13) 
-- CODE:
x = input("descricao do brasao: ")
print("Entrada:", x)

if ((x == "lobo") or (x == "leao") or (x == "veado") or (x == "dragao") or (x == "rosa") or (x == "sol") or (x == "lula") or (x == "esfolado") or (x == "turta")):

	if (x == "lobo"):
		print("Casa: Stark")
	elif(x == "leao"):
		print("Casa: Lannister")
	elif(x == "veado"):
		print("Casa: Baratheon")
	elif(x == "dragao"):
		print("Casa: Targaryen")
	elif(x == "rosa"):
		print("Casa: Tyrell")
	elif(x == "sol"):
		print("Casa: Martell")
	elif(x == "lula"):
		print("Casa: Greyjoy")
	elif(x == "esfolado"):
		print("Casa: Bolton")
	elif(x == "turta"):
		print("Casa: Tully")
else:
	print("Brasao invaldo")
-- EXECUTION TIME:
0.192479
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invaldo
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 16:10:20) 
-- CODE:
x = input("descricao do brasao: ")
print("Entrada:", x)

if ((x == "lobo") or (x == "leao") or (x == "veado") or (x == "dragao") or (x == "rosa") or (x == "sol") or (x == "lula") or (x == "esfolado") or (x == "turta")):

	if (x == "lobo"):
		print("Casa: Stark")
	elif(x == "leao"):
		print("Casa: Lannister")
	elif(x == "veado"):
		print("Casa: Baratheon")
	elif(x == "dragao"):
		print("Casa: Targaryen")
	elif(x == "rosa"):
		print("Casa: Tyrell")
	elif(x == "sol"):
		print("Casa: Martell")
	elif(x == "lula"):
		print("Casa: Greyjoy")
	elif(x == "esfolado"):
		print("Casa: Bolton")
	elif(x == "turta"):
		print("Casa: Tully")
else:
	print("Brasao invaldo")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 16:11:06) 
-- CODE:
x = input("descricao do brasao: ").lower()
print("Entrada:", x)

if ((x == "lobo") or (x == "leao") or (x == "veado") or (x == "dragao") or (x == "rosa") or (x == "sol") or (x == "lula") or (x == "esfolado") or (x == "turta")):

	if (x == "lobo"):
		print("Casa: Stark")
	elif(x == "leao"):
		print("Casa: Lannister")
	elif(x == "veado"):
		print("Casa: Baratheon")
	elif(x == "dragao"):
		print("Casa: Targaryen")
	elif(x == "rosa"):
		print("Casa: Tyrell")
	elif(x == "sol"):
		print("Casa: Martell")
	elif(x == "lula"):
		print("Casa: Greyjoy")
	elif(x == "esfolado"):
		print("Casa: Bolton")
	elif(x == "turta"):
		print("Casa: Tully")
else:
	print("Brasao invaldo")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 16:11:15) 
-- CODE:
x = input("descricao do brasao: ").lower()
print("Entrada:", x)

if ((x == "lobo") or (x == "leao") or (x == "veado") or (x == "dragao") or (x == "rosa") or (x == "sol") or (x == "lula") or (x == "esfolado") or (x == "turta")):

	if (x == "lobo"):
		print("Casa: Stark")
	elif(x == "leao"):
		print("Casa: Lannister")
	elif(x == "veado"):
		print("Casa: Baratheon")
	elif(x == "dragao"):
		print("Casa: Targaryen")
	elif(x == "rosa"):
		print("Casa: Tyrell")
	elif(x == "sol"):
		print("Casa: Martell")
	elif(x == "lula"):
		print("Casa: Greyjoy")
	elif(x == "esfolado"):
		print("Casa: Bolton")
	elif(x == "turta"):
		print("Casa: Tully")
else:
	print("Brasao invaldo")
-- EXECUTION TIME:
0.128835
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invaldo
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 16:11:20) 
-- CODE:
x = input("descricao do brasao: ").lower()
print("Entrada:", x)

if ((x == "lobo") or (x == "leao") or (x == "veado") or (x == "dragao") or (x == "rosa") or (x == "sol") or (x == "lula") or (x == "esfolado") or (x == "turta")):

	if (x == "lobo"):
		print("Casa: Stark")
	elif(x == "leao"):
		print("Casa: Lannister")
	elif(x == "veado"):
		print("Casa: Baratheon")
	elif(x == "dragao"):
		print("Casa: Targaryen")
	elif(x == "rosa"):
		print("Casa: Tyrell")
	elif(x == "sol"):
		print("Casa: Martell")
	elif(x == "lula"):
		print("Casa: Greyjoy")
	elif(x == "esfolado"):
		print("Casa: Bolton")
	elif(x == "turta"):
		print("Casa: Tully")
else:
	print("Brasao invaldo")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 16:11:37) 
-- CODE:
x = input("descricao do brasao: ").lower()
print("Entrada:", x)

if ((x == "lobo") or (x == "leao") or (x == "veado") or (x == "dragao") or (x == "rosa") or (x == "sol") or (x == "lula") or (x == "esfolado") or (x == "turta")):

	if (x == "lobo"):
		print("Casa: Stark")
	elif(x == "leao"):
		print("Casa: Lannister")
	elif(x == "veado"):
		print("Casa: Baratheon")
	elif(x == "dragao"):
		print("Casa: Targaryen")
	elif(x == "rosa"):
		print("Casa: Tyrell")
	elif(x == "sol"):
		print("Casa: Martell")
	elif(x == "lula"):
		print("Casa: Greyjoy")
	elif(x == "esfolado"):
		print("Casa: Bolton")
	elif(x == "turta"):
		print("Casa: Tully")
else:
	print("Brasao invaldo")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 16:11:51) 
-- CODE:
x = input("descricao do brasao: ").lower()
print("Entrada:", x)

if ((x == "lobo") or (x == "leao") or (x == "veado") or (x == "dragao") or (x == "rosa") or (x == "sol") or (x == "lula") or (x == "esfolado") or (x == "turta")):

	if (x == "lobo"):
		print("Casa: Stark")
	elif(x == "leao"):
		print("Casa: Lannister")
	elif(x == "veado"):
		print("Casa: Baratheon")
	elif(x == "dragao"):
		print("Casa: Targaryen")
	elif(x == "rosa"):
		print("Casa: Tyrell")
	elif(x == "sol"):
		print("Casa: Martell")
	elif(x == "lula"):
		print("Casa: Greyjoy")
	elif(x == "esfolado"):
		print("Casa: Bolton")
	elif(x == "turta"):
		print("Casa: Tully")
else:
	print("Brasao invaldo")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 16:12:05) 
-- CODE:
x = input("descricao do brasao: ").lower()
print("Entrada:", x)

if ((x == "lobo") or (x == "leao") or (x == "veado") or (x == "dragao") or (x == "rosa") or (x == "sol") or (x == "lula") or (x == "esfolado") or (x == "turta")):

	if (x == "lobo"):
		print("Casa: Stark")
	elif(x == "leao"):
		print("Casa: Lannister")
	elif(x == "veado"):
		print("Casa: Baratheon")
	elif(x == "dragao"):
		print("Casa: Targaryen")
	elif(x == "rosa"):
		print("Casa: Tyrell")
	elif(x == "sol"):
		print("Casa: Martell")
	elif(x == "lula"):
		print("Casa: Greyjoy")
	elif(x == "esfolado"):
		print("Casa: Bolton")
	elif(x == "turta"):
		print("Casa: Tully")
else:
	print("Brasao invaldo")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 16:12:34) 
-- CODE:
x = input("descricao do brasao: ").lower()
print("Entrada:", x)

if ((x == "lobo") or (x == "leao") or (x == "veado") or (x == "dragao") or (x == "rosa") or (x == "sol") or (x == "lula") or (x == "esfolado") or (x == "turta")):

	if (x == "lobo"):
		print("Casa: Stark")
	elif(x == "leao"):
		print("Casa: Lannister")
	elif(x == "veado"):
		print("Casa: Baratheon")
	elif(x == "dragao"):
		print("Casa: Targaryen")
	elif(x == "rosa"):
		print("Casa: Tyrell")
	elif(x == "sol"):
		print("Casa: Martell")
	elif(x == "lula"):
		print("Casa: Greyjoy")
	elif(x == "esfolado"):
		print("Casa: Bolton")
	elif(x == "turta"):
		print("Casa: Tully")
else:
	print("Brasao invaldo")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 16:12:44) 
-- CODE:
x = input("descricao do brasao: ").lower()
print("Entrada:", x)

if ((x == "lobo") or (x == "leao") or (x == "veado") or (x == "dragao") or (x == "rosa") or (x == "sol") or (x == "lula") or (x == "esfolado") or (x == "turta")):

	if (x == "lobo"):
		print("Casa: Stark")
	elif(x == "leao"):
		print("Casa: Lannister")
	elif(x == "veado"):
		print("Casa: Baratheon")
	elif(x == "dragao"):
		print("Casa: Targaryen")
	elif(x == "rosa"):
		print("Casa: Tyrell")
	elif(x == "sol"):
		print("Casa: Martell")
	elif(x == "lula"):
		print("Casa: Greyjoy")
	elif(x == "esfolado"):
		print("Casa: Bolton")
	elif(x == "turta"):
		print("Casa: Tully")
else:
	print("Brasao invaldo")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 16:12:52) 
-- CODE:
x = input("descricao do brasao: ").lower()
print("Entrada:", x)

if ((x == "lobo") or (x == "leao") or (x == "veado") or (x == "dragao") or (x == "rosa") or (x == "sol") or (x == "lula") or (x == "esfolado") or (x == "turta")):

	if (x == "lobo"):
		print("Casa: Stark")
	elif(x == "leao"):
		print("Casa: Lannister")
	elif(x == "veado"):
		print("Casa: Baratheon")
	elif(x == "dragao"):
		print("Casa: Targaryen")
	elif(x == "rosa"):
		print("Casa: Tyrell")
	elif(x == "sol"):
		print("Casa: Martell")
	elif(x == "lula"):
		print("Casa: Greyjoy")
	elif(x == "esfolado"):
		print("Casa: Bolton")
	elif(x == "turta"):
		print("Casa: Tully")
else:
	print("Brasao invaldo")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 16:13:05) 
-- CODE:
x = input("descricao do brasao: ").lower()
print("Entrada:", x)

if ((x == "lobo") or (x == "leao") or (x == "veado") or (x == "dragao") or (x == "rosa") or (x == "sol") or (x == "lula") or (x == "esfolado") or (x == "turta")):

	if (x == "lobo"):
		print("Casa: Stark")
	elif(x == "leao"):
		print("Casa: Lannister")
	elif(x == "veado"):
		print("Casa: Baratheon")
	elif(x == "dragao"):
		print("Casa: Targaryen")
	elif(x == "rosa"):
		print("Casa: Tyrell")
	elif(x == "sol"):
		print("Casa: Martell")
	elif(x == "lula"):
		print("Casa: Greyjoy")
	elif(x == "esfolado"):
		print("Casa: Bolton")
	elif(x == "turta"):
		print("Casa: Tully")
else:
	print("Brasao invaldo")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 16:13:19) 
-- CODE:
x = input("descricao do brasao: ").lower()
print("Entrada:", x)

if ((x == "lobo") or (x == "leao") or (x == "veado") or (x == "dragao") or (x == "rosa") or (x == "sol") or (x == "lula") or (x == "esfolado") or (x == "turta")):

	if (x == "lobo"):
		print("Casa: Stark")
	elif(x == "leao"):
		print("Casa: Lannister")
	elif(x == "veado"):
		print("Casa: Baratheon")
	elif(x == "dragao"):
		print("Casa: Targaryen")
	elif(x == "rosa"):
		print("Casa: Tyrell")
	elif(x == "sol"):
		print("Casa: Martell")
	elif(x == "lula"):
		print("Casa: Greyjoy")
	elif(x == "esfolado"):
		print("Casa: Bolton")
	elif(x == "turta"):
		print("Casa: Tully")
else:
	print("Brasao invaldo")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 16:13:28) 
-- CODE:
x = input("descricao do brasao: ").lower()
print("Entrada:", x)

if ((x == "lobo") or (x == "leao") or (x == "veado") or (x == "dragao") or (x == "rosa") or (x == "sol") or (x == "lula") or (x == "esfolado") or (x == "turta")):

	if (x == "lobo"):
		print("Casa: Stark")
	elif(x == "leao"):
		print("Casa: Lannister")
	elif(x == "veado"):
		print("Casa: Baratheon")
	elif(x == "dragao"):
		print("Casa: Targaryen")
	elif(x == "rosa"):
		print("Casa: Tyrell")
	elif(x == "sol"):
		print("Casa: Martell")
	elif(x == "lula"):
		print("Casa: Greyjoy")
	elif(x == "esfolado"):
		print("Casa: Bolton")
	elif(x == "turta"):
		print("Casa: Tully")
else:
	print("Brasao invaldo")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 16:13:34) 
-- CODE:
x = input("descricao do brasao: ").lower()
print("Entrada:", x)

if ((x == "lobo") or (x == "leao") or (x == "veado") or (x == "dragao") or (x == "rosa") or (x == "sol") or (x == "lula") or (x == "esfolado") or (x == "turta")):

	if (x == "lobo"):
		print("Casa: Stark")
	elif(x == "leao"):
		print("Casa: Lannister")
	elif(x == "veado"):
		print("Casa: Baratheon")
	elif(x == "dragao"):
		print("Casa: Targaryen")
	elif(x == "rosa"):
		print("Casa: Tyrell")
	elif(x == "sol"):
		print("Casa: Martell")
	elif(x == "lula"):
		print("Casa: Greyjoy")
	elif(x == "esfolado"):
		print("Casa: Bolton")
	elif(x == "turta"):
		print("Casa: Tully")
else:
	print("Brasao invaldo")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 16:14:04) 
-- CODE:
x = input("descricao do brasao: ").lower()
print("Entrada:", x)

if ((x == "lobo") or (x == "leao") or (x == "veado") or (x == "dragao") or (x == "rosa") or (x == "sol") or (x == "lula") or (x == "esfolado") or (x == "turta")):

	if (x == "lobo"):
		print("Casa: Stark")
	elif(x == "leao"):
		print("Casa: Lannister")
	elif(x == "veado"):
		print("Casa: Baratheon")
	elif(x == "dragao"):
		print("Casa: Targaryen")
	elif(x == "rosa"):
		print("Casa: Tyrell")
	elif(x == "sol"):
		print("Casa: Martell")
	elif(x == "lula"):
		print("Casa: Greyjoy")
	elif(x == "esfolado"):
		print("Casa: Bolton")
	elif(x == "turta"):
		print("Casa: Tully")
else:
	print("Brasao invaldo")
-- EXECUTION TIME:
0.105132
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invaldo
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 16:14:11) 
-- CODE:
x = input("descricao do brasao: ")
print("Entrada:", x)

if ((x == "lobo") or (x == "leao") or (x == "veado") or (x == "dragao") or (x == "rosa") or (x == "sol") or (x == "lula") or (x == "esfolado") or (x == "turta")):

	if (x == "lobo"):
		print("Casa: Stark")
	elif(x == "leao"):
		print("Casa: Lannister")
	elif(x == "veado"):
		print("Casa: Baratheon")
	elif(x == "dragao"):
		print("Casa: Targaryen")
	elif(x == "rosa"):
		print("Casa: Tyrell")
	elif(x == "sol"):
		print("Casa: Martell")
	elif(x == "lula"):
		print("Casa: Greyjoy")
	elif(x == "esfolado"):
		print("Casa: Bolton")
	elif(x == "turta"):
		print("Casa: Tully")
else:
	print("Brasao invaldo")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 16:14:14) 
-- CODE:
x = input("descricao do brasao: ")
print("Entrada:", x)

if ((x == "lobo") or (x == "leao") or (x == "veado") or (x == "dragao") or (x == "rosa") or (x == "sol") or (x == "lula") or (x == "esfolado") or (x == "turta")):

	if (x == "lobo"):
		print("Casa: Stark")
	elif(x == "leao"):
		print("Casa: Lannister")
	elif(x == "veado"):
		print("Casa: Baratheon")
	elif(x == "dragao"):
		print("Casa: Targaryen")
	elif(x == "rosa"):
		print("Casa: Tyrell")
	elif(x == "sol"):
		print("Casa: Martell")
	elif(x == "lula"):
		print("Casa: Greyjoy")
	elif(x == "esfolado"):
		print("Casa: Bolton")
	elif(x == "turta"):
		print("Casa: Tully")
else:
	print("Brasao invaldo")
-- EXECUTION TIME:
0.221422
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invaldo
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 16:15:26) 
-- CODE:
x = input("descricao do brasao: ")
print("Entrada:", x)

if ((x == "lobo") or (x == "leao") or (x == "veado") or (x == "dragao") or (x == "rosa") or (x == "sol") or (x == "lula") or (x == "esfolado") or (x == "turta")):

if (x == "lobo"):
	print("Casa: Stark")
elif(x == "leao"):
	print("Casa: Lannister")
elif(x == "veado"):
	print("Casa: Baratheon")
elif(x == "dragao"):
	print("Casa: Targaryen")
elif(x == "rosa"):
	print("Casa: Tyrell")
elif(x == "sol"):
	print("Casa: Martell")
elif(x == "lula"):
	print("Casa: Greyjoy")
elif(x == "esfolado"):
	print("Casa: Bolton")
elif(x == "turta"):
	print("Casa: Tully")
else:
	print("Brasao invaldo")
-- EXECUTION TIME:
0.204951
-- ERROR:
  File "/home/codebench/codes/1674/1105/main.py", line 6
    if (x == "lobo"):
     ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 16:15:29) 
-- CODE:
x = input("descricao do brasao: ")
print("Entrada:", x)

if ((x == "lobo") or (x == "leao") or (x == "veado") or (x == "dragao") or (x == "rosa") or (x == "sol") or (x == "lula") or (x == "esfolado") or (x == "turta")):

if (x == "lobo"):
	print("Casa: Stark")
elif(x == "leao"):
	print("Casa: Lannister")
elif(x == "veado"):
	print("Casa: Baratheon")
elif(x == "dragao"):
	print("Casa: Targaryen")
elif(x == "rosa"):
	print("Casa: Tyrell")
elif(x == "sol"):
	print("Casa: Martell")
elif(x == "lula"):
	print("Casa: Greyjoy")
elif(x == "esfolado"):
	print("Casa: Bolton")
elif(x == "turta"):
	print("Casa: Tully")
else:
	print("Brasao invaldo")
-- ERROR:
File "XXXX", line 6
    if (x == "lobo"):
     ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 16:15:33) 
-- CODE:
x = input("descricao do brasao: ")
print("Entrada:", x)

if ((x == "lobo") or (x == "leao") or (x == "veado") or (x == "dragao") or (x == "rosa") or (x == "sol") or (x == "lula") or (x == "esfolado") or (x == "turta")):

if (x == "lobo"):
	print("Casa: Stark")
elif(x == "leao"):
	print("Casa: Lannister")
elif(x == "veado"):
	print("Casa: Baratheon")
elif(x == "dragao"):
	print("Casa: Targaryen")
elif(x == "rosa"):
	print("Casa: Tyrell")
elif(x == "sol"):
	print("Casa: Martell")
elif(x == "lula"):
	print("Casa: Greyjoy")
elif(x == "esfolado"):
	print("Casa: Bolton")
elif(x == "turta"):
	print("Casa: Tully")
else:
	print("Brasao invaldo")
-- ERROR:
File "XXXX", line 6
    if (x == "lobo"):
     ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 16:15:42) 
-- CODE:
x = input("descricao do brasao: ")
print("Entrada:", x)

if ((x == "lobo") or (x == "leao") or (x == "veado") or (x == "dragao") or (x == "rosa") or (x == "sol") or (x == "lula") or (x == "esfolado") or (x == "turta")):

	if (x == "lobo"):
		print("Casa: Stark")
elif(x == "leao"):
	print("Casa: Lannister")
elif(x == "veado"):
	print("Casa: Baratheon")
elif(x == "dragao"):
	print("Casa: Targaryen")
elif(x == "rosa"):
	print("Casa: Tyrell")
elif(x == "sol"):
	print("Casa: Martell")
elif(x == "lula"):
	print("Casa: Greyjoy")
elif(x == "esfolado"):
	print("Casa: Bolton")
elif(x == "turta"):
	print("Casa: Tully")
else:
	print("Brasao invaldo")
-- OUTPUT:
Entrada: lula
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 16:15:46) 
-- CODE:
x = input("descricao do brasao: ")
print("Entrada:", x)

if ((x == "lobo") or (x == "leao") or (x == "veado") or (x == "dragao") or (x == "rosa") or (x == "sol") or (x == "lula") or (x == "esfolado") or (x == "turta")):

	if (x == "lobo"):
		print("Casa: Stark")
elif(x == "leao"):
	print("Casa: Lannister")
elif(x == "veado"):
	print("Casa: Baratheon")
elif(x == "dragao"):
	print("Casa: Targaryen")
elif(x == "rosa"):
	print("Casa: Tyrell")
elif(x == "sol"):
	print("Casa: Martell")
elif(x == "lula"):
	print("Casa: Greyjoy")
elif(x == "esfolado"):
	print("Casa: Bolton")
elif(x == "turta"):
	print("Casa: Tully")
else:
	print("Brasao invaldo")
-- EXECUTION TIME:
0.174503
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invaldo
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 16:15:58) 
-- CODE:
x = input("descricao do brasao: ")
print("Entrada:", x)

if ((x == "lobo") or (x == "leao") or (x == "veado") or (x == "dragao") or (x == "rosa") or (x == "sol") or (x == "lula") or (x == "esfolado") or (x == "turta")):

	if(x == "lobo"):
		print("Casa: Stark")
elif(x == "leao"):
	print("Casa: Lannister")
elif(x == "veado"):
	print("Casa: Baratheon")
elif(x == "dragao"):
	print("Casa: Targaryen")
elif(x == "rosa"):
	print("Casa: Tyrell")
elif(x == "sol"):
	print("Casa: Martell")
elif(x == "lula"):
	print("Casa: Greyjoy")
elif(x == "esfolado"):
	print("Casa: Bolton")
elif(x == "turta"):
	print("Casa: Tully")
else:
	print("Brasao invaldo")
-- OUTPUT:
Entrada: lula
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 16:16:02) 
-- CODE:
x = input("descricao do brasao: ")
print("Entrada:", x)

if ((x == "lobo") or (x == "leao") or (x == "veado") or (x == "dragao") or (x == "rosa") or (x == "sol") or (x == "lula") or (x == "esfolado") or (x == "turta")):

	if(x == "lobo"):
		print("Casa: Stark")
elif(x == "leao"):
	print("Casa: Lannister")
elif(x == "veado"):
	print("Casa: Baratheon")
elif(x == "dragao"):
	print("Casa: Targaryen")
elif(x == "rosa"):
	print("Casa: Tyrell")
elif(x == "sol"):
	print("Casa: Martell")
elif(x == "lula"):
	print("Casa: Greyjoy")
elif(x == "esfolado"):
	print("Casa: Bolton")
elif(x == "turta"):
	print("Casa: Tully")
else:
	print("Brasao invaldo")
-- EXECUTION TIME:
0.158724
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invaldo
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 16:16:04) 
-- CODE:
x = input("descricao do brasao: ")
print("Entrada:", x)

if ((x == "lobo") or (x == "leao") or (x == "veado") or (x == "dragao") or (x == "rosa") or (x == "sol") or (x == "lula") or (x == "esfolado") or (x == "turta")):

	if(x == "lobo"):
		print("Casa: Stark")
elif(x == "leao"):
	print("Casa: Lannister")
elif(x == "veado"):
	print("Casa: Baratheon")
elif(x == "dragao"):
	print("Casa: Targaryen")
elif(x == "rosa"):
	print("Casa: Tyrell")
elif(x == "sol"):
	print("Casa: Martell")
elif(x == "lula"):
	print("Casa: Greyjoy")
elif(x == "esfolado"):
	print("Casa: Bolton")
elif(x == "turta"):
	print("Casa: Tully")
else:
	print("Brasao invaldo")
-- OUTPUT:
Entrada: lula
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 16:16:44) 
-- CODE:
x = input("descricao do brasao: ")
print("Entrada:", x)

if ((x == "lobo") or (x == "leao") or (x == "veado") or (x == "dragao") or (x == "rosa") or (x == "sol") or (x == "lula") or (x == "esfolado") or (x == "turta")):

	if(x == "lobo"):
		print("Casa: Stark")
	elif(x == "leao"):
		print("Casa: Lannister")
	elif(x == "veado"):
		print("Casa: Baratheon")
	elif(x == "dragao"):
		print("Casa: Targaryen")
	elif(x == "rosa"):
		print("Casa: Tyrell")
	elif(x == "sol"):
		print("Casa: Martell")
	elif(x == "lula"):
		print("Casa: Greyjoy")
	elif(x == "esfolado"):
		print("Casa: Bolton")
	elif(x == "turta"):
		print("Casa: Tully")
else:
	print("Brasao invaldo")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 16:17:08) 
-- CODE:
x = input("descricao do brasao: ")
print("Entrada:", x)

if ((x == "lobo") or (x == "leao") or (x == "veado") or (x == "dragao") or (x == "rosa") or (x == "sol") or (x == "lula") or (x == "esfolado") or (x == "turta")):

	if(x == "lobo"):
		print("Casa: Stark")
	elif(x == "leao"):
		print("Casa: Lannister")
	elif(x == "veado"):
		print("Casa: Baratheon")
	elif(x == "dragao"):
		print("Casa: Targaryen")
	elif(x == "rosa"):
		print("Casa: Tyrell")
	elif(x == "sol"):
		print("Casa: Martell")
	elif(x == "lula"):
		print("Casa: Greyjoy")
	elif(x == "esfolado"):
		print("Casa: Bolton")
	elif(x == "turta"):
		print("Casa: Tully")
else:
	print("Brasao invaldo")
-- EXECUTION TIME:
0.186822
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invaldo
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 16:18:07) 
-- CODE:
x = input("descricao do brasao: ")
print("Entrada:", x)

if ((x == "lobo") or (x == "leao") or (x == "veado") or (x == "dragao") or (x == "rosa") or (x == "sol") or (x == "lula") or (x == "esfolado") or (x == "turta")):

	if(x == "lobo"):
		print("Casa: Stark")
	elif(x == "leao"):
		print("Casa: Lannister")
	elif(x == "veado"):
		print("Casa: Baratheon")
	elif(x == "dragao"):
		print("Casa: Targaryen")
	elif(x == "rosa"):
		print("Casa: Tyrell")
	elif(x == "sol"):
		print("Casa: Martell")
	elif(x == "lula"):
		print("Casa: Greyjoy")
	elif(x == "esfolado"):
		print("Casa: Bolton")
	elif(x == "turta"):
		print("Casa: Tully")
else:
	print("Brasao invaldo")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 16:18:32) 
-- CODE:
x = input("descricao do brasao: ")
print("Entrada:", x)

if ((x == "lobo") or (x == "leao") or (x == "veado") or (x == "dragao") or (x == "rosa") or (x == "sol") or (x == "lula") or (x == "esfolado") or (x == "turta")):

	if(x == "lobo"):
		print("Casa: Stark")
	elif(x == "leao"):
		print("Casa: Lannister")
	elif(x == "veado"):
		print("Casa: Baratheon")
	elif(x == "dragao"):
		print("Casa: Targaryen")
	elif(x == "rosa"):
		print("Casa: Tyrell")
	elif(x == "sol"):
		print("Casa: Martell")
	elif(x == "lula"):
		print("Casa: Greyjoy")
	elif(x == "esfolado"):
		print("Casa: Bolton")
	elif(x == "turta"):
		print("Casa: Tully")
else:
	print("Brasao invalido")
-- EXECUTION TIME:
0.181557
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
